# AIE6-work

02_Embeddings_and_RAG/: .cursorrules  Pythonic_RAG_Assignment.ipynb  pyproject.toml  questions_answered.md
02_Embeddings_and_RAG/aimakerspace/: text_utils.py  vectordatabase.py
05_Our_First_Agent_with_LangGraph/: Introduction_to_LangGraph_for_Agents_Assignment_Version.ipynb
06_Multi_Agent_with_LangGraph/: Multi_Agent_RAG_LangGraph.ipynb
07_Synthetic_Data_Generation_and_LangSmith/: Synthetic_Data_Generation_RAGAS_&_LangSmith_Assignment.ipynb  ai_across_years_kg.json
08_Evaluating_RAG_With_Ragas/: Evaluating_Agents_with_Ragas_(2025)_AI_Makerspace.ipynb  Evaluating_RAG_with_Ragas_(2025)_AI_Makerspace.ipynb
09_Finetuning_Embeddings/: Fine_tuning_Embedding_Models_for_RAG_Notebook.ipynb  test_dataset.jsonl  training_dataset.jsonl  val_dataset.jsonl
